--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hockey</title>
+    <title>Donate</title>
     <!-- daisyui -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
@@ -17,8 +17,9 @@
         theme: {
           extend: {
             colors: {
-              clifford: "#da373d",
-              
+              primary: "#B4F461",
+              gray1: "#585858",
+              gray2: "#F9F7F3",
             },
           },
         },
@@ -30,14 +31,58 @@
       crossorigin="anonymous"
     ></script>
     <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      .font- {
+      .font-lexend {
+        font-family: "Lexend", sans-serif;
       }
     </style>
   </head>
-  <body class=".font-">
-    <header></header>
-    <main></main>
+  <body class="font-lexend">
+    <header>
+      <!-- navBg -->
+      <section class="bg-gray2">
+        <!-- nav  -->
+        <nav class="container mx-auto px-3">
+          <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
+            <div class="hidden md:flex">
+              <button class="font-semibold text-xl btn bg-primary md:px-8">
+                Blog
+              </button>
+            </div>
+            <div class="flex items-center md:gap-3">
+              <div class="">
+                <img
+                  src="./images/logo.png"
+                  class="w-4/6 mx-auto md:w-full"
+                  alt=""
+                />
+              </div>
+
+              <h3 class="md:text-xl font-semibold">Donate Bangladesh</h3>
+            </div>
+            <div class="flex items-center gap-2">
+              <div class="">
+                <img src="./images/coin.png" class="w-full" alt="" />
+              </div>
+
+              <h3 class="md:text-xl text-gray1 font-medium">
+                <span>5500</span> BDT
+              </h3>
+            </div>
+          </div>
+        </nav>
+      </section>
+    </header>
+    <main>
+      
+
+    </main>
     <footer></footer>
     <script src="./feature.js"></script>
   </body>
