nav responsive done

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donate</title>
+    <title>Blog</title>
     <!-- daisyui -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
@@ -51,11 +51,11 @@
         <nav class="container mx-auto md:px-6">
           <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
             <div class="md:hidden">
-              <button class="btn text-xl btn bg-primary px-3"><i class="fa-solid fa-newspaper"></i></button>
+              <button class="btn text-xl btn bg-primary px-3"><i class="fa-solid fa-house"></i></button>
             </div>
             <div class="hidden md:flex">
               <button class="font-semibold text-xl btn bg-primary md:px-8">
-                Blog
+                Home
               </button>
             </div>
             <div class="flex items-center md:gap-3">
