--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </header>
     <main class="container mx-auto px-3 md:px-6">
       <!--donation  -->
-      <section class="space-y-6">
+      <section class="space-y-6 hidden">
         <!-- card1 -->
         <div
           class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
@@ -123,14 +123,12 @@
               Donate for Flood at Noakhali, Bangladesh
             </h3>
             <p class="text-gray1">
-              The recent floods in Feni have devastated local communities,
-              leading to severe disruption and loss. Your generous donation will
-              help provide immediate aid, including food, clean water, and
-              medical supplies, to those affected by this calamity. Together, we
-              can offer crucial support and help rebuild lives in the aftermath
-              of this disaster. Every contribution counts towards making a real
-              difference. Please consider donating today to assist those in
-              urgent need.
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
             </p>
             <input
               type="text"
@@ -227,9 +225,40 @@
         </div>
       </section>
       <!-- history -->
-      <section></section>
+      <section class="space-y-4">
+        <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
+          <h3 class="text-xl font-bold">
+            <span>96500</span> Taka is Donated for famine-2024 at Feni,
+            Bangladesh
+          </h3>
+          <p class="text-gray1">
+            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00 (Bangladesh Standard
+            Time)
+          </p>
+        </div>
+        <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
+          <h3 class="text-xl font-bold">
+            <span>96500</span> Taka is Donated for famine-2024 at Feni,
+            Bangladesh
+          </h3>
+          <p class="text-gray1">
+            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00 (Bangladesh Standard
+            Time)
+          </p>
+        </div>
+        <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
+          <h3 class="text-xl font-bold">
+            <span>96500</span> Taka is Donated for famine-2024 at Feni,
+            Bangladesh
+          </h3>
+          <p class="text-gray1">
+            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00 (Bangladesh Standard
+            Time)
+          </p>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="bg-gray2 h-20 mt-10  md:mt-16 lg:mt-20"></footer>
     <script src="./feature.js"></script>
   </body>
 </html>
