history section done

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
             Bangladesh
           </h3>
           <p class="text-gray1">
-            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00 (Bangladesh Standard
-            Time)
+            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00
+            (Bangladesh Standard Time)
           </p>
         </div>
         <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
@@ -242,8 +242,8 @@
             Bangladesh
           </h3>
           <p class="text-gray1">
-            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00 (Bangladesh Standard
-            Time)
+            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00
+            (Bangladesh Standard Time)
           </p>
         </div>
         <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
@@ -252,13 +252,13 @@
             Bangladesh
           </h3>
           <p class="text-gray1">
-            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00 (Bangladesh Standard
-            Time)
+            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00
+            (Bangladesh Standard Time)
           </p>
         </div>
       </section>
     </main>
-    <footer class="bg-gray2 h-20 mt-10  md:mt-16 lg:mt-20"></footer>
+    <footer class="bg-gray2 h-20 mt-10 md:mt-16 lg:mt-20"></footer>
     <script src="./feature.js"></script>
   </body>
 </html>
