--- a/index.html
+++ b/index.html
@@ -44,221 +44,227 @@
       }
     </style>
   </head>
-  <body class="font-lexend">
-    <header>
-      <!-- navBg -->
-      <section class="bg-gray2">
-        <!-- nav  -->
-        <nav class="container mx-auto md:px-6">
-          <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
-            <div class="md:hidden">
-              <button class="btn text-xl btn bg-primary px-3">
-                <i class="fa-solid fa-newspaper"></i>
-              </button>
-            </div>
-            <div class="hidden md:flex">
-              <button class="font-semibold text-xl btn bg-primary md:px-8">
-                Blog
-              </button>
-            </div>
-            <div class="flex items-center md:gap-3">
-              <div class="">
-                <img
-                  src="./images/logo.png"
-                  class="w-4/6 mx-auto md:w-full"
-                  alt=""
-                />
-              </div>
+  <body class="font-lexend bg-gray2">
+    <!-- nav bg -->
 
-              <h3 class="md:text-xl font-semibold">Donate Bangladesh</h3>
-            </div>
-            <div class="flex items-center gap-2">
-              <div class="">
-                <img src="./images/coin.png" class="w-full" alt="" />
-              </div>
-
-              <h3 class="md:text-xl text-gray1 font-medium">
-                <span>5500</span> BDT
-              </h3>
-            </div>
+    <header class="sticky top-0 z-2 backdrop-blur-lg">
+      <!-- nav  -->
+      <nav class="container mx-auto md:px-6">
+        <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
+          <div class="md:hidden">
+            <button class="btn text-xl btn bg-primary px-3">
+              <i class="fa-solid fa-newspaper"></i>
+            </button>
           </div>
-        </nav>
-      </section>
-      <!-- button toggle -->
-      <div
-        class="container flex justify-center py-6 md:py-10 lg:py-16 gap-3 mx-auto"
-      >
-        <button class="font-semibold text-xl btn bg-primary md:px-8">
-          Donation
-        </button>
-        <button
-          class="btn btn-outline font-semibold text-xl md:px-8 text-gray1"
-        >
-          History
-        </button>
-      </div>
+          <div class="hidden md:flex">
+            <button class="font-semibold text-xl btn bg-primary md:px-8">
+              Blog
+            </button>
+          </div>
+          <div class="flex items-center md:gap-3">
+            <div class="">
+              <img
+                src="./images/logo.png"
+                class="w-4/6 mx-auto md:w-full"
+                alt=""
+              />
+            </div>
+
+            <h3 class="md:text-xl font-semibold">Donate Bangladesh</h3>
+          </div>
+          <div class="flex items-center gap-2">
+            <div class="">
+              <img src="./images/coin.png" class="w-full" alt="" />
+            </div>
+
+            <h3 class="md:text-xl text-gray1 font-medium">
+              <span>5500</span> BDT
+            </h3>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main class="container mx-auto px-3 md:px-6">
-      <!--donation  -->
-      <section class="space-y-6 hidden">
-        <!-- card1 -->
-        <div
-          class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
-        >
-          <!-- image -->
-          <div class="object-cover">
-            <img
-              src="./images/noakhali.png"
-              class="object-cover w-full lg:h-full rounded-xl"
-              alt=""
-            />
-          </div>
-          <!-- text -->
-          <div class="flex flex-col justify-between gap-4">
-            <div class="flex items-center gap-3 bg-gray3 rounded-xl p-3 w-fit">
-              <img src="./images/coin.png" alt="" />
-              <h3 class="font-semibold text-gray1"><span>600</span> BDT</h3>
+    <!--  -->
+    <section class="bg-white pb-20">
+      <main class="container mx-auto px-3 md:px-6">
+        <!-- button toggle -->
+        <div class="flex justify-center py-6 md:py-10 lg:py-16 gap-3">
+          <button class="font-semibold text-xl btn bg-primary md:px-8">
+            Donation
+          </button>
+          <button
+            class="btn btn-outline font-semibold text-xl md:px-8 text-gray1"
+          >
+            History
+          </button>
+        </div>
+        <!--donation  -->
+        <section class="space-y-6">
+          <!-- card1 -->
+          <div
+            class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
+          >
+            <!-- image -->
+            <div class="object-cover">
+              <img
+                src="./images/noakhali.png"
+                class="object-cover w-full lg:h-full rounded-xl"
+                alt=""
+              />
             </div>
-            <h3 class="font-bold text-xl">
-              Donate for Flood at Noakhali, Bangladesh
+            <!-- text -->
+            <div class="flex flex-col justify-between gap-4">
+              <div
+                class="flex items-center gap-3 bg-gray3 rounded-xl p-3 w-fit"
+              >
+                <img src="./images/coin.png" alt="" />
+                <h3 class="font-semibold text-gray1"><span>600</span> BDT</h3>
+              </div>
+              <h3 class="font-bold text-xl">
+                Donate for Flood at Noakhali, Bangladesh
+              </h3>
+              <p class="text-gray1">
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+              <input
+                type="text"
+                placeholder="Write Donation Amount"
+                class="input input-bordered w-full"
+              />
+              <button class="font-semibold text-xl btn bg-primary w-full">
+                Donate Now
+              </button>
+            </div>
+          </div>
+          <!-- card2 -->
+          <div
+            class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
+          >
+            <!-- image -->
+            <div class="object-cover">
+              <img
+                src="./images/feni.png"
+                class="object-cover w-full lg:h-full rounded-xl"
+                alt=""
+              />
+            </div>
+            <!-- text -->
+            <div class="flex flex-col justify-between gap-4">
+              <div
+                class="flex items-center gap-3 bg-gray3 rounded-xl p-3 w-fit"
+              >
+                <img src="./images/coin.png" alt="" />
+                <h3 class="font-semibold text-gray1"><span>600</span> BDT</h3>
+              </div>
+              <h3 class="font-bold text-xl">
+                Donate for Flood Relief in Feni,Bangladesh
+              </h3>
+              <p class="text-gray1">
+                The recent floods in Feni have devastated local communities,
+                leading to severe disruption and loss. Your generous donation
+                will help provide immediate aid, including food, clean water,
+                and medical supplies, to those affected by this calamity.
+                Together, we can offer crucial support and help rebuild lives in
+                the aftermath of this disaster. Every contribution counts
+                towards making a real difference. Please consider donating today
+                to assist those in urgent need.
+              </p>
+              <input
+                type="text"
+                placeholder="Write Donation Amount"
+                class="input input-bordered w-full"
+              />
+              <button class="font-semibold text-xl btn bg-primary w-full">
+                Donate Now
+              </button>
+            </div>
+          </div>
+          <!-- card3 -->
+          <div
+            class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
+          >
+            <!-- image -->
+            <div class="object-cover">
+              <img
+                src="./images/quota-protest.png"
+                class="object-cover w-full lg:h-full rounded-xl"
+                alt=""
+              />
+            </div>
+            <!-- text -->
+            <div class="flex flex-col justify-between gap-4">
+              <div
+                class="flex items-center gap-3 bg-gray3 rounded-xl p-3 w-fit"
+              >
+                <img src="./images/coin.png" alt="" />
+                <h3 class="font-semibold text-gray1"><span>600</span> BDT</h3>
+              </div>
+              <h3 class="font-bold text-xl">
+                Aid for Injured in the Quota Movement
+              </h3>
+              <p class="text-gray1">
+                The recent Quota movement has resulted in numerous injuries and
+                significant hardship for many individuals. Your support is
+                crucial in providing medical assistance, rehabilitation, and
+                necessary supplies to those affected. By contributing, you help
+                ensure that injured individuals receive the care and support
+                they need during this challenging time. Every donation plays a
+                vital role in alleviating their suffering and aiding in their
+                recovery. Please consider making a donation to support these
+                brave individuals in their time of need.
+              </p>
+              <input
+                type="text"
+                placeholder="Write Donation Amount"
+                class="input input-bordered w-full"
+              />
+              <button class="font-semibold text-xl btn bg-primary w-full">
+                Donate Now
+              </button>
+            </div>
+          </div>
+        </section>
+        <!-- history -->
+        <section class="space-y-4">
+          <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
+            <h3 class="text-xl font-bold">
+              <span>96500</span> Taka is Donated for famine-2024 at Feni,
+              Bangladesh
             </h3>
             <p class="text-gray1">
-              The recent floods in Noakhali have caused significant damage to
-              homes infrastructure. Your donation will help provide essential
-              supplies and to those affected by this disaster. Every
-              contribution, big or small, makes difference. Please join us in
-              supporting the relief efforts and making a positive impact on the
-              lives of those in need.
+              Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT
+              +06:00 (Bangladesh Standard Time)
             </p>
-            <input
-              type="text"
-              placeholder="Write Donation Amount"
-              class="input input-bordered w-full"
-            />
-            <button class="font-semibold text-xl btn bg-primary w-full">
-              Donate Now
-            </button>
           </div>
-        </div>
-        <!-- card2 -->
-        <div
-          class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
-        >
-          <!-- image -->
-          <div class="object-cover">
-            <img
-              src="./images/feni.png"
-              class="object-cover w-full lg:h-full rounded-xl"
-              alt=""
-            />
-          </div>
-          <!-- text -->
-          <div class="flex flex-col justify-between gap-4">
-            <div class="flex items-center gap-3 bg-gray3 rounded-xl p-3 w-fit">
-              <img src="./images/coin.png" alt="" />
-              <h3 class="font-semibold text-gray1"><span>600</span> BDT</h3>
-            </div>
-            <h3 class="font-bold text-xl">
-              Donate for Flood Relief in Feni,Bangladesh
+          <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
+            <h3 class="text-xl font-bold">
+              <span>96500</span> Taka is Donated for famine-2024 at Feni,
+              Bangladesh
             </h3>
             <p class="text-gray1">
-              The recent floods in Feni have devastated local communities,
-              leading to severe disruption and loss. Your generous donation will
-              help provide immediate aid, including food, clean water, and
-              medical supplies, to those affected by this calamity. Together, we
-              can offer crucial support and help rebuild lives in the aftermath
-              of this disaster. Every contribution counts towards making a real
-              difference. Please consider donating today to assist those in
-              urgent need.
+              Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT
+              +06:00 (Bangladesh Standard Time)
             </p>
-            <input
-              type="text"
-              placeholder="Write Donation Amount"
-              class="input input-bordered w-full"
-            />
-            <button class="font-semibold text-xl btn bg-primary w-full">
-              Donate Now
-            </button>
           </div>
-        </div>
-        <!-- card3 -->
-        <div
-          class="grid grid-cols-1 lg:grid-cols-2 p-4 rounded-xl border-gray-200 border-2 gap-4"
-        >
-          <!-- image -->
-          <div class="object-cover">
-            <img
-              src="./images/quota-protest.png"
-              class="object-cover w-full lg:h-full rounded-xl"
-              alt=""
-            />
-          </div>
-          <!-- text -->
-          <div class="flex flex-col justify-between gap-4">
-            <div class="flex items-center gap-3 bg-gray3 rounded-xl p-3 w-fit">
-              <img src="./images/coin.png" alt="" />
-              <h3 class="font-semibold text-gray1"><span>600</span> BDT</h3>
-            </div>
-            <h3 class="font-bold text-xl">
-              Aid for Injured in the Quota Movement
+          <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
+            <h3 class="text-xl font-bold">
+              <span>96500</span> Taka is Donated for famine-2024 at Feni,
+              Bangladesh
             </h3>
             <p class="text-gray1">
-              The recent Quota movement has resulted in numerous injuries and
-              significant hardship for many individuals. Your support is crucial
-              in providing medical assistance, rehabilitation, and necessary
-              supplies to those affected. By contributing, you help ensure that
-              injured individuals receive the care and support they need during
-              this challenging time. Every donation plays a vital role in
-              alleviating their suffering and aiding in their recovery. Please
-              consider making a donation to support these brave individuals in
-              their time of need.
+              Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT
+              +06:00 (Bangladesh Standard Time)
             </p>
-            <input
-              type="text"
-              placeholder="Write Donation Amount"
-              class="input input-bordered w-full"
-            />
-            <button class="font-semibold text-xl btn bg-primary w-full">
-              Donate Now
-            </button>
           </div>
-        </div>
-      </section>
-      <!-- history -->
-      <section class="space-y-4">
-        <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
-          <h3 class="text-xl font-bold">
-            <span>96500</span> Taka is Donated for famine-2024 at Feni,
-            Bangladesh
-          </h3>
-          <p class="text-gray1">
-            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00
-            (Bangladesh Standard Time)
-          </p>
-        </div>
-        <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
-          <h3 class="text-xl font-bold">
-            <span>96500</span> Taka is Donated for famine-2024 at Feni,
-            Bangladesh
-          </h3>
-          <p class="text-gray1">
-            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00
-            (Bangladesh Standard Time)
-          </p>
-        </div>
-        <div class="rounded-xl border-gray-200 border-2 p-4 space-y-4">
-          <h3 class="text-xl font-bold">
-            <span>96500</span> Taka is Donated for famine-2024 at Feni,
-            Bangladesh
-          </h3>
-          <p class="text-gray1">
-            Date : <span>Tue Sep 17 2024</span> <span>08:39:11</span> GMT +06:00
-            (Bangladesh Standard Time)
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer class="bg-gray2 h-20 mt-10 md:mt-16 lg:mt-20"></footer>
+        </section>
+      </main>
+    </section>
+    <footer class="h-10 md:h-16 lg:h-20"></footer>
     <script src="./feature.js"></script>
   </body>
 </html>
