add toggle function

--- a/blog.html
+++ b/blog.html
@@ -52,12 +52,12 @@
       <nav class="container mx-auto md:px-6">
         <div class="flex justify-between items-center py-3 md:pt-6 md:pb-10">
           <div class="md:hidden">
-            <button class="btn text-xl btn bg-primary px-3">
+            <button onclick="home()" class="btn text-xl btn bg-primary px-3">
               <i class="fa-solid fa-house"></i>
             </button>
           </div>
           <div class="hidden md:flex">
-            <button class="font-semibold text-xl btn bg-primary md:px-8">
+            <button onclick="home()" class="font-semibold text-xl btn bg-primary md:px-8">
               Home
             </button>
           </div>
